--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ellipsis-text": "^1.2.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-loader-spinner": "^6.1.6",
