--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.3",
     "js-cookie": "^3.0.5",
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
